erDiagram
    %% Thực thể chính
    TENANT {
        string MaTenant PK
        string Ten
        int Tuoi
        float NganSach
        string ThoiQuen
        string SoThich
        string SDT
        string Email
        date NgayTao
        date NgayCapNhat
    }

    LANDLORD {
        string MaLandlord PK
        string Ten
        string SDT
        string Email
        date NgayTao
        date NgayCapNhat
    }

    ACCOUNT {
        string MaAccount PK
        string TenDangNhap
        string MatKhau
        string VaiTro
        string TrangThai
    }

    ROOM {
        string MaPhong PK
        string MaLandlord FK
        string LoaiPhong
        string TrangThai
        float GiaThue
        string MoTa
        date NgayTao
        date NgayCapNhat
    }

    LOCATION {
        string MaViTri PK
        string DiaChiChiTiet
        string Phuong
        string Quan
        string ThanhPho
        float Latitude
        float Longitude
    }

    AMENITY {
        string MaTienNghi PK
        string TenTienNghi
        string MoTa
    }

    ROOM_IMAGE {
        string MaAnh PK
        string MaPhong FK
        string DuongDan
        int ThuTu
    }

    LISTING {
        string MaTin PK
        string MaPhong FK
        string MaLandlord FK
        string TieuDe
        string MoTaChiTiet
        date NgayTao
        date NgayCapNhat
    }

    VIEWING_SCHEDULE {
        string MaLich PK
        string MaTenant FK
        string MaPhong FK
        datetime NgayGioXem
        string TrangThai
        date NgayTao
        date NgayCapNhat
    }

    CONTRACT {
        string MaHopDong PK
        string MaTenant FK
        string MaPhong FK
        date NgayBatDau
        date NgayKetThuc
        string TrangThai
        float TongTien
        float TienCoc
        date NgayTao
        date NgayCapNhat
    }

    PAYMENT {
        string MaThanhToan PK
        string MaHopDong FK
        date NgayThanhToan
        float SoTien
        string HinhThuc
        string TrangThai
    }

    REVIEW {
        string MaDanhGia PK
        string MaPhong FK
        string MaTenant FK
        int Diem
        string NoiDung
        date NgayDanhGia
    }

    AI_MATCHING {
        string MaGoiY PK
        string MaTenant FK
        string MaPhong FK
        float DiemTuongThich
        string LyDo
        date NgayGoiY
    }

    NOTIFICATION {
        string MaThongBao PK
        string MaNguoiNhan FK
        string NoiDung
        string Loai
        date NgayTao
        string TrangThai
    }

    %% Quan hệ chính
    LANDLORD ||--o{ ROOM : "quản lý"
    ROOM ||--o{ AMENITY : "có" 
    ROOM ||--o| LISTING : "tạo"
    TENANT ||--o{ CONTRACT : "ký"
    ROOM ||--o| CONTRACT : "thuộc"
    TENANT ||--o{ VIEWING_SCHEDULE : "đặt"
    ROOM ||--o{ VIEWING_SCHEDULE : "có"
    TENANT ||--o{ AI_MATCHING : "nhận gợi ý"
    ROOM ||--o{ AI_MATCHING : "gợi ý cho"
    TENANT ||--o{ NOTIFICATION : "nhận"
    LANDLORD ||--o{ NOTIFICATION : "nhận"
    ACCOUNT ||--|| TENANT : "gắn với"
    ACCOUNT ||--|| LANDLORD : "gắn với"
    ROOM ||--|| LOCATION : "thuộc vị trí"
    ROOM ||--o{ ROOM_IMAGE : "có"
    CONTRACT ||--o{ PAYMENT : "thực hiện"
    TENANT ||--o{ REVIEW : "đánh giá"
    ROOM ||--o{ REVIEW : "nhận đánh giá"
